feat(demo): publish first visible beta

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,9 +1,9 @@
 <header>
-  <demo-header/>
+  <demo-header />
 </header>
 <aside>
-  <demo-sidebar/>
+  <demo-sidebar />
 </aside>
-<main>
-  <router-outlet/>
+<main #scroll>
+  <router-outlet />
 </main>
