--- a/projects/demo/src/app/components/header/header.component.scss
+++ b/projects/demo/src/app/components/header/header.component.scss
@@ -1,6 +1,6 @@
 h1 {
   margin-inline-start: 1em;
-  color: #313c52;
+  color: var(--secondary);
   font-size: 24px;
   font-family: Bitter, sans-serif;
 }
