--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -5,11 +5,12 @@ aside {
 
 header {
   grid-area: header;
-  border-bottom: 15px solid #55f0c8;
+  border-bottom: 15px solid var(--primary);
 }
 
 main {
   grid-area: main;
   padding: 2em;
-  background-color: #f5f5f5;
+  background-color: var(--bg-primary);
+  overflow: scroll;
 }
