feat(demo): add `ngx-progress` download info

--- a/projects/demo/src/app/pages/progress/progress.component.html
+++ b/projects/demo/src/app/pages/progress/progress.component.html
@@ -16,7 +16,7 @@
 
   <h2>Installation</h2>
 
-  <!-- <pre><code [languages]="['bash']" [highlight]="npmInstallCode"></code></pre> -->
+  <pre><code [languages]="['bash']" [highlight]="npmInstallCode"></code></pre>
 
   in a module:
 
