feat(demo): add missing imports

--- a/projects/demo/src/app/pages/progress/progress.component.html
+++ b/projects/demo/src/app/pages/progress/progress.component.html
@@ -1,5 +1,5 @@
 <demo-showcase>
-  <h1>ngx-Progress</h1>
+  <h1>ngx-progress</h1>
 
   <p>
     A small utility directive to create progress bars without having to hack
