--- a/projects/demo/src/app/components/sidebar/sidebar.component.html
+++ b/projects/demo/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,7 @@
 <ul>
-  <!-- <li><a routerLink="#" routerLinkActive="active">Flex Limitter</a></li> -->
+  <li>
+    <a routerLink="flex-limitter" routerLinkActive="active">Flex Limitter</a>
+  </li>
   <li><a routerLink="progress" routerLinkActive="active">Progress</a></li>
   <!-- <li><a routerLink="#" routerLinkActive="active">Service Flux</a></li> -->
 </ul>
