--- a/projects/demo/src/app/components/code-view/code-view.component.scss
+++ b/projects/demo/src/app/components/code-view/code-view.component.scss
@@ -1,3 +1,26 @@
+header {
+  background-color: white;
+}
+
+nav {
+  button {
+    background-color: transparent;
+    border: none;
+    font-weight: 600;
+    font-size: 16px;
+    padding: 12px 20px;
+    cursor: pointer;
+    color: rgba(34, 34, 34, 0.5333333333);
+
+    &.active {
+      color: #222;
+      text-decoration: underline;
+      text-decoration-style: wavy;
+      text-decoration-color: var(--primary);
+    }
+  }
+}
+
 pre {
   display: grid;
   margin: 0;
