build(core): `angular@20`

--- a/projects/demo/src/app/components/showcase/showcase.component.html
+++ b/projects/demo/src/app/components/showcase/showcase.component.html
@@ -3,5 +3,7 @@
 </div>
 
 <aside>
-  <demo-toc *ngIf="tableOfContent.length" [items]="tableOfContent"></demo-toc>
+  @if (tableOfContent.length) {
+    <demo-toc [items]="tableOfContent"></demo-toc>
+  }
 </aside>
