--- a/projects/demo/src/app/components/example/example.component.html
+++ b/projects/demo/src/app/components/example/example.component.html
@@ -2,6 +2,8 @@
   <ng-content></ng-content>
 </div>
 
-<div *ngIf="showCode" class="code">
-  <demo-code-view [files]="sourceCode"></demo-code-view>
-</div>
+@if (showCode) {
+  <div class="code">
+    <demo-code-view [files]="sourceCode"></demo-code-view>
+  </div>
+}
