--- a/projects/demo/src/app/pages/flex-limitter/flex-limitter.component.html
+++ b/projects/demo/src/app/pages/flex-limitter/flex-limitter.component.html
@@ -12,15 +12,15 @@
 
   <h2>Installation</h2>
 
-  <pre><code [languages]="['bash']" [highlight]="npmInstallCode"></code></pre>
+  <pre><code [highlight]="npmInstallCode" language="bash"></code></pre>
 
   in a module:
 
-  <pre><code [highlight]="angularModuleInstallCode"></code></pre>
+  <pre><code [highlight]="angularModuleInstallCode" language="bash"></code></pre>
 
   Or in a standalone component:
 
-  <pre><code [highlight]="angularStandaloneInstallCode"></code></pre>
+  <pre><code [highlight]="angularStandaloneInstallCode" language="bash"></code></pre>
 
   <h2 id="overview">Overview</h2>
 
@@ -44,7 +44,7 @@
       <code>ngxFlexLimitterItem</code>: the template that will be used to
       display each item.
 
-      <pre><code [highlight]="itemTemplateCode"></code></pre>
+      <pre><code [highlight]="itemTemplateCode" language="html"></code></pre>
       <p>
         you can access the items in your item list by using the implicit
         <a
@@ -61,14 +61,14 @@
         long as it starts with <code>let</code> eg: <code>let-hello</code>,
         <code>let-world</code>, etc.
       </p>
-      <pre><code [highlight]="itemTemplateVariableCode"></code></pre>
+      <pre><code [highlight]="itemTemplateVariableCode" language="html"></code></pre>
     </li>
 
     <li>
       <code>ngxFlexLimitterExpand</code>: the template that will be used to
       represent the expand element.
 
-      <pre><code [highlight]="expandTemplateCode"></code></pre>
+      <pre><code [highlight]="expandTemplateCode" language="html"></code></pre>
 
       <p>
         the expand element will be displayed when the amount of items in your
@@ -87,7 +87,7 @@
       <code>ngxFlexLimitterCollapse</code>: the template that will be used to
       represent the collapse element.
 
-      <pre><code [highlight]="collapseTemplateCode"></code></pre>
+      <pre><code [highlight]="collapseTemplateCode" language="html"></code></pre>
 
       <p>
         this element is only displayed when ALL of the items that were
