--- a/projects/demo/src/app/pages/progress/progress.component.html
+++ b/projects/demo/src/app/pages/progress/progress.component.html
@@ -16,15 +16,15 @@
 
   <h2>Installation</h2>
 
-  <pre><code [languages]="['bash']" [highlight]="npmInstallCode"></code></pre>
+  <pre><code [highlight]="npmInstallCode" language="bash"></code></pre>
 
   in a module:
 
-  <pre><code [highlight]="angularModuleInstallCode"></code></pre>
+  <pre><code [highlight]="angularModuleInstallCode" language="bash"></code></pre>
 
   Or in a standalone component:
 
-  <pre><code [highlight]="angularStandaloneInstallCode"></code></pre>
+  <pre><code [highlight]="angularStandaloneInstallCode" language="bash"></code></pre>
 
   <h2 id="examples">Examples</h2>
 
